@@ -1,5 +1,8 @@
 2009-08-23  Ulrich Drepper  <drepper@redhat.com>
 
+	* posix/unistd.h: Define _POSIX_VERSION correctly if older POSIX
+	versions are selected.
+
 	* stdio-common/printf_fp.c: ISO C expects to print the sign of NaN
 	as well.
 	* stdio-common/printf_fphex.c: Likewise.
